# ai-course-dspy

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/routes/: course.py  evaluate.py  ingest.py
app/core/: config.py  database.py
app/models/: db.py  schemas.py
app/services/: course_generator.py  evaluation_generator.py  vector_store.py
app/services/ingestion/: __init__.py  pdf_ingester.py  text_ingester.py  topic_ingester.py  youtube_ingester.py
app/services/pipeline/: __init__.py  course_pipeline.py  rlm_pipeline.py  signatures.py
app/utils/: chunker.py
frontend/: index.html
tests/: conftest.py  test_api.py  test_ingestion.py  test_pipeline.py
